--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,6 +17,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
+    - name: Install TFTP client
+      run: |
+        sudo apt-get update -qq
+        sudo apt-get install -y -qq tftp-hpa
+      
     - name: Build Docker image
       uses: docker/build-push-action@v5
       with:
@@ -49,10 +54,6 @@ jobs:
         
     - name: Test TFTP functionality
       run: |
-        # Install TFTP client
-        sudo apt-get update
-        sudo apt-get install -y tftp-hpa
-        
         # Change to temp directory for test
         cd /tmp
         
