--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -90,14 +90,14 @@ jobs:
         rm -f /tmp/test
 
     - name: Login to Docker Hub
-      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Extract metadata
-      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+      if: startsWith(github.ref, 'refs/tags/v')
       id: meta
       uses: docker/metadata-action@v5
       with:
@@ -106,7 +106,7 @@ jobs:
           type=semver,pattern={{version}}
 
     - name: Build and push to Docker Hub
-      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: docker/build-push-action@v5
       with:
         context: .
