Fix workflow permissions in base image update workflow [skip ci]

--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -13,6 +13,10 @@ on:
         default: 'false'
         type: boolean
 
+permissions:
+  contents: write
+  actions: read
+
 jobs:
   check-base-image:
     runs-on: ubuntu-latest
