Get the digest using docker pull (multi-platform images require this approach) in base image update workflow [skip ci]

--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -30,18 +30,8 @@ jobs:
     - name: Check for base image updates
       id: check
       run: |
-        # Get the digest using manifest inspect (more reliable than pull)
-        echo "Debugging manifest structure:"
-        docker manifest inspect debian:bookworm-slim | jq '.'
-        
-        # Try multiple digest extraction methods
-        CURRENT_DIGEST=$(docker manifest inspect debian:bookworm-slim | jq -r '.digest // .config.digest // empty')
-        
-        # Fallback: if still empty, try docker images --digests
-        if [ "$CURRENT_DIGEST" = "" ] || [ "$CURRENT_DIGEST" = "null" ]; then
-          echo "Fallback: using docker pull to get digest"
-          CURRENT_DIGEST=$(docker pull debian:bookworm-slim 2>&1 | grep "Digest:" | sed 's/.*Digest: //' || echo "")
-        fi
+        # Get the digest using docker pull (multi-platform images require this approach)
+        CURRENT_DIGEST=$(docker pull debian:bookworm-slim 2>&1 | grep "Digest:" | sed 's/.*Digest: //' || echo "")
         
         # Get the digest from git repository (if file exists)
         LAST_DIGEST=""
