--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,8 @@ name: Docker Build, Test and Publish
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]
+    tags: 
+      - 'v*'
   pull_request:
     branches: [ main ]
   workflow_dispatch:
