--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -10,7 +10,7 @@ on:
       dry_run:
         description: 'Dry run mode (check only, no build/deploy)'
         required: false
-        default: 'false'
+        default: false
         type: boolean
 
 permissions:
