--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -33,11 +33,8 @@ jobs:
         # Get the digest using docker pull (multi-platform images require this approach)
         CURRENT_DIGEST=$(docker pull debian:bookworm-slim 2>&1 | grep "Digest:" | sed 's/.*Digest: //' || echo "")
         
-        # Get the digest from git repository (if file exists)
-        LAST_DIGEST=""
-        if git show HEAD:last-base-image-check.txt >/dev/null 2>&1; then
-          LAST_DIGEST=$(git show HEAD:last-base-image-check.txt)
-        fi
+        # Get the digest from GitHub repository variable
+        LAST_DIGEST=$(gh variable get LAST_BASE_DIGEST || echo "")
         
         echo "Current digest: $CURRENT_DIGEST"
         echo "Last digest: $LAST_DIGEST"
@@ -45,21 +42,12 @@ jobs:
         if [ "$CURRENT_DIGEST" != "$LAST_DIGEST" ] && [ "$CURRENT_DIGEST" != "" ]; then
           echo "Base image has been updated!"
           echo "should-rebuild=true" >> $GITHUB_OUTPUT
-          # Save digest to file for committing later
-          echo "$CURRENT_DIGEST" > last-base-image-check.txt
+          # Save digest to GitHub variable
+          gh variable set LAST_BASE_DIGEST --body "$CURRENT_DIGEST"
         else
           echo "Base image has not changed"
           echo "should-rebuild=false" >> $GITHUB_OUTPUT
         fi
-        
-    - name: Commit updated digest
-      if: steps.check.outputs.should-rebuild == 'true'
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add last-base-image-check.txt
-        git commit -m "Update base image digest [skip ci]" || exit 0
-        git push
 
   build-test-deploy:
     needs: check-base-image
