--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -15,7 +15,7 @@ on:
 
 permissions:
   contents: write
-  actions: read
+  actions: write
 
 jobs:
   check-base-image:
@@ -29,6 +29,8 @@ jobs:
       
     - name: Check for base image updates
       id: check
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |
         # Get the digest using docker pull (multi-platform images require this approach)
         CURRENT_DIGEST=$(docker pull debian:bookworm-slim 2>&1 | grep "Digest:" | sed 's/.*Digest: //' || echo "")
