--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,7 +2,7 @@ name: Docker Build, Test and Publish
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "*" ]
     tags: 
       - v*
   pull_request:
