--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -92,9 +92,8 @@ jobs:
         docker stop tftp-test || true
         docker rm tftp-test || true
         
-        # Fix permissions for upload test (tftp user needs write access)
-        sudo chown -R tftp:nogroup /srv/docker/tftp
-        sudo chmod 755 /srv/docker/tftp
+        # Fix permissions for upload test (allow container tftp user to write)
+        sudo chmod 777 /srv/docker/tftp
         
         # Start container with --create flag to enable uploads
         docker run -d \
@@ -111,8 +110,12 @@ jobs:
         cd /tmp
         echo "Upload test file content" > upload-test.txt
         
-        # Upload file via TFTP
-        echo -e "binary\nput upload-test.txt" | tftp localhost
+        # Upload file via TFTP (from /tmp to TFTP server)
+        tftp localhost <<EOF
+binary
+put upload-test.txt
+quit
+EOF
         
         # Verify file was uploaded to server
         if [ -f /srv/docker/tftp/upload-test.txt ]; then
