Fix test failure in TFTP `put` check (4).

--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -214,6 +214,9 @@ jobs:
         # Clean up uploaded test file
         sudo rm -f /srv/docker/tftp/upload-test.txt
         
+        # Check TFTP logs for write request
+        docker logs tftp-test | grep "WRQ from"
+        
     - name: Cleanup test container
       if: always()
       run: |
