--- a/.github/workflows/base-image-update.yml
+++ b/.github/workflows/base-image-update.yml
@@ -13,13 +13,17 @@ on:
         default: false
         type: boolean
 
-permissions: write-all
+permissions:
+  contents: write
+  actions: write
+  packages: write
 
 jobs:
   check-base-image:
     runs-on: ubuntu-latest
     outputs:
       should-rebuild: ${{ steps.check.outputs.should-rebuild }}
+      digest: ${{ steps.check.outputs.digest }}
       
     steps:
     - name: Checkout code
@@ -28,13 +32,30 @@ jobs:
     - name: Check for base image updates
       id: check
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ secrets.GH_ACTIONS_PAT }}
       run: |
         # Get the digest using docker pull (multi-platform images require this approach)
         CURRENT_DIGEST=$(docker pull debian:bookworm-slim 2>&1 | grep "Digest:" | sed 's/.*Digest: //' || echo "")
         
-        # Get the digest from GitHub repository variable
-        LAST_DIGEST="${{ vars.LAST_BASE_DIGEST }}"
+        # Get the digest from GitHub repository variable using REST API
+        echo "Fetching last digest from GitHub..."
+        API_URL="https://api.github.com/repos/${{ github.repository }}/actions/variables/LAST_BASE_DIGEST"
+        
+        API_RESPONSE=$(curl -sL \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer $GH_TOKEN" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "$API_URL")
+        
+        # Check if API call was successful
+        if echo "$API_RESPONSE" | jq -e '.value' >/dev/null 2>&1; then
+          echo "✅ Successfully retrieved variable"
+        else
+          echo "❌ Failed to retrieve variable:"
+          echo "$API_RESPONSE"
+        fi
+        
+        LAST_DIGEST=$(echo "$API_RESPONSE" | jq -r '.value // ""' 2>/dev/null || echo "")
         
         echo "Current digest: $CURRENT_DIGEST"
         echo "Last digest: $LAST_DIGEST"
@@ -42,8 +63,24 @@ jobs:
         if [ "$CURRENT_DIGEST" != "$LAST_DIGEST" ] && [ "$CURRENT_DIGEST" != "" ]; then
           echo "Base image has been updated!"
           echo "should-rebuild=true" >> $GITHUB_OUTPUT
-          # Save digest to GitHub variable
-          gh variable set LAST_BASE_DIGEST --body "$CURRENT_DIGEST"
+          echo "digest=$CURRENT_DIGEST" >> $GITHUB_OUTPUT
+          
+          # Save digest to GitHub variable using REST API
+          echo "Updating GitHub variable..."
+          
+          UPDATE_RESPONSE=$(curl -sL -X PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "$API_URL" \
+            -d "{\"name\":\"LAST_BASE_DIGEST\",\"value\":\"$CURRENT_DIGEST\"}")
+          
+          if [ -z "$UPDATE_RESPONSE" ]; then
+            echo "✅ Successfully updated variable"
+          else
+            echo "❌ Failed to update variable:"
+            echo "$UPDATE_RESPONSE"
+          fi
         else
           echo "Base image has not changed"
           echo "should-rebuild=false" >> $GITHUB_OUTPUT
@@ -66,7 +103,7 @@ jobs:
       id: version
       run: |
         # Get the latest tag, or start with 1.0.0 if no tags exist
-        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
         echo "Latest tag: $LATEST_TAG"
         
         # Remove 'v' prefix if present
@@ -83,6 +120,8 @@ jobs:
         NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
         NEW_TAG="v$NEW_VERSION"
         
+        echo "Preserving major.minor: $MAJOR.$MINOR"
+        echo "Incrementing patch: $PATCH -> $NEW_PATCH"
         echo "New version: $NEW_VERSION"
         echo "New tag: $NEW_TAG"
         
@@ -135,10 +174,11 @@ jobs:
         
     - name: Test TFTP functionality
       run: |
+        # Change to temp directory for test
         cd /tmp
-        uname -a | sudo tee /srv/docker/tftp/test
         
         # Test TFTP download
+        uname -a | sudo tee /srv/docker/tftp/test
         echo "get test" | tftp localhost
         
         # Verify file was downloaded and content matches
@@ -161,60 +201,56 @@ jobs:
         
         # Check TFTP logs for request
         docker logs tftp-test | grep "RRQ from"
-
-    - name: Test TFTP custom options (PUT functionality)
+        
+    - name: Test TFTP upload functionality
       run: |
         # Stop existing container
         docker stop tftp-test || true
         docker rm tftp-test || true
         
-        # Fix permissions for upload test (allow container tftp user to write)
-        sudo chmod 777 /srv/docker/tftp
+        # Set permissions for upload testing
+        sudo chmod -R 777 /srv/docker/tftp
         
-        # Start container with --create flag to enable uploads
+        # Start container with upload capability (--create flag)
         docker run -d \
           --name tftp-test \
           --network host \
-          -v /srv/docker/tftp:/srv/tftp \
+          -e TZ=America/Denver \
           -e TFTP_ARGS="--foreground --secure --create --verbosity 4 --user tftp" \
-          kaczmar2/tftp-hpa:latest
-        
-        # Wait for container to be ready
+          -v /srv/docker/tftp:/srv/tftp \
+          kaczmar2/tftp-hpa:base-update-test
+          
+        # Wait for startup
         sleep 3
         
-        # Test TFTP upload (PUT)
+        # Test file upload
         cd /tmp
-        echo "Upload test file content" > upload-test.txt
-        
-        # Upload file via TFTP (from /tmp to TFTP server)
+        echo "upload test content" > upload-test.txt
         tftp localhost <<'EOF'
         binary
         put upload-test.txt
         quit
         EOF
         
-        # Verify file was uploaded to server
+        # Verify uploaded file exists and has correct content
         if [ -f /srv/docker/tftp/upload-test.txt ]; then
           echo "✅ File uploaded successfully"
-          if grep -q "Upload test file content" /srv/docker/tftp/upload-test.txt; then
-            echo "✅ Uploaded file content is correct"
+          if diff upload-test.txt /srv/docker/tftp/upload-test.txt; then
+            echo "✅ Uploaded file content matches"
           else
-            echo "❌ Uploaded file content is incorrect"
-            echo "Expected: Upload test file content"
-            echo "Actual:"
+            echo "❌ Uploaded file content differs"
+            echo "Original file:"
+            cat upload-test.txt
+            echo "Uploaded file:"
             cat /srv/docker/tftp/upload-test.txt
             exit 1
           fi
         else
           echo "❌ File was not uploaded"
-          ls -la /srv/docker/tftp/
           exit 1
         fi
         
-        # Clean up uploaded test file
-        sudo rm -f /srv/docker/tftp/upload-test.txt
-        
-        # Check TFTP logs for write request
+        # Check TFTP logs for upload request
         docker logs tftp-test | grep "WRQ from"
         
     - name: Cleanup test container
@@ -222,7 +258,7 @@ jobs:
       run: |
         docker stop tftp-test || true
         docker rm tftp-test || true
-        rm -f /tmp/test
+        rm -f /tmp/test /tmp/upload-test.txt
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -236,7 +272,7 @@ jobs:
       with:
         images: kaczmar2/tftp-hpa
         tags: |
-          type=raw,value=${{ steps.version.outputs.version }}
+          type=semver,pattern={{version}},value=${{ steps.version.outputs.tag }}
 
     - name: Build and push to Docker Hub
       uses: docker/build-push-action@v5
@@ -251,6 +287,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git tag -a "${{ steps.version.outputs.tag }}" -m "Automatic base image update to ${{ steps.version.outputs.version }}"
+        git tag -a "${{ steps.version.outputs.tag }}" -m "Automatic base image update: alpine:latest ${{ needs.check-base-image.outputs.digest }}"
         git push origin "${{ steps.version.outputs.tag }}"
         
